Tests refactored.