@@ -26,41 +26,33 @@
  */
 package it.tidalwave.image;
 
-import java.lang.reflect.InvocationTargetException;
 import javax.annotation.Nonnull;
-import java.time.Instant;
-import java.time.ZoneId;
-import java.time.format.DateTimeFormatter;
+import java.time.LocalDateTime;
+import java.time.ZoneOffset;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
-import java.util.Date;
 import java.util.List;
-import java.util.Optional;
-import java.util.function.Function;
-import java.util.stream.Stream;
 import java.io.File;
 import java.io.IOException;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import it.tidalwave.util.Pair;
 import it.tidalwave.image.metadata.Directory;
 import it.tidalwave.image.metadata.EXIF;
+import it.tidalwave.image.metadata.EXIFDirectoryGenerated;
 import it.tidalwave.image.metadata.EXIFTest;
 import it.tidalwave.image.metadata.IPTC;
 import it.tidalwave.image.metadata.TIFF;
 import it.tidalwave.image.op.ReadOp;
 import lombok.extern.slf4j.Slf4j;
-import org.testng.AssertJUnit;
-import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 import static it.tidalwave.image.op.ReadOp.Type.METADATA;
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static it.tidalwave.util.test.FileComparisonUtils.assertSameContents;
+import static org.junit.Assert.assertThat;
 import static org.testng.AssertJUnit.*;
+import static org.hamcrest.CoreMatchers.*;
 
 /***********************************************************************************************************************
  *
@@ -74,51 +66,54 @@ public class EditableImageTest extends BaseTestSupport
     public void testPropertiesWithJPG()
             throws IOException
       {
-        _testProperties(file_20030701_0043_jpg, 3000, 1995, 3, 8, 24, EditableImage.DataType.BYTE);
+        _testProperties(file_20030701_0043_jpg, 100, 66, 3, 8, 24, EditableImage.DataType.BYTE);
       }
 
     @Test
-    public void testReadMetadataFromJPEGWithBM25()
+    public void testReadMetadataJpegExportedByCaptureOne()
             throws Exception
       {
-        System.out.println("testLoadEXIFFromJPEGWithBM25");
         final EditableImage image = EditableImage.create(new ReadOp(file_20030701_0043_jpg));
         assertEquals(3, image.getBandCount());
         assertEquals(8, image.getBitsPerBand());
         assertEquals(24, image.getBitsPerPixel());
         assertEquals(EditableImage.DataType.BYTE, image.getDataType());
-        assertEquals(1995, image.getHeight());
-        assertEquals(3000, image.getWidth());
+        assertEquals(100, image.getWidth());
+        assertEquals(66, image.getHeight());
 
         final TIFF tiff = image.getMetadata(TIFF.class);
         assertNotNull(tiff);
-        dump(tiff);
+        dumpTags("TIFF", tiff, log::info);
         assertFalse(tiff.isAvailable());
 
         final EXIF exif = image.getMetadata(EXIF.class);
         assertNotNull(exif);
-        dump(exif);
+        dumpTags("EXIF", exif, log::info);
         assertTrue(exif.isAvailable());
-        assertEquals(29, exif.getTagCodes().length);
+        assertEquals(27, exif.getTagCodes().length);
 
-        assertOptionalEquals("NIKON CORPORATION", exif.getMake());
-        assertOptionalEquals("NIKON D100", exif.getModel());
-        assertOptionalEquals(new Rational(300, 1), exif.getXResolution());
-        assertOptionalEquals(new Rational(300, 1), exif.getYResolution());
-        assertOptionalEquals(EXIF.ResolutionUnit.INCHES, exif.getResolutionUnit());
-        assertOptionalEquals("Nikon Capture Editor 4.1.3 W", exif.getSoftware());
-        assertOptionalEquals("2006:11:11 20:24:33", exif.getDateTime());
-        assertOptionalEquals("(C) Copyright 2006 by Fabrizio Giudici", exif.getCopyright());
+        // assertOptionalEquals("NIKON CORPORATION", exif.getMake());
+        // assertOptionalEquals("NIKON D100", exif.getModel());
+        // assertOptionalEquals(new Rational(300, 1), exif.getXResolution());
+        // assertOptionalEquals(new Rational(300, 1), exif.getYResolution());
+        // assertOptionalEquals(EXIF.ResolutionUnit.INCHES, exif.getResolutionUnit());
+        // assertOptionalEquals("Nikon Capture Editor 4.1.3 W", exif.getSoftware());
+        // assertOptionalEquals("2006:11:11 20:24:33", exif.getDateTime());
+        // assertOptionalEquals("(C) Copyright 2006 by Fabrizio Giudici", exif.getCopyright());
         assertOptionalEquals(new Rational(1, 320), exif.getExposureTime());
         assertOptionalEquals(new Rational(28, 10), exif.getFNumber());
         assertOptionalEquals(EXIF.ExposureProgram.SHUTTER_PRIORITY, exif.getExposureProgram());
         assertOptionalEquals(400, exif.getISOSpeedRatings());
         assertOptionalEquals(new byte[]{48, 50, 50, 49}, exif.getEXIFVersion());
         assertOptionalEquals("2003:07:01 12:29:36", exif.getDateTimeOriginal());
+        assertOptionalEquals("800", exif.getSubsecTimeOriginal());
+        assertOptionalEquals(LocalDateTime.of(2003, 7, 1, 12, 29, 44, 0).toInstant(ZoneOffset.UTC),
+                     exif.getDateTimeDigitizedAsDate());
         assertOptionalEquals("2003:07:01 12:29:36", exif.getDateTimeDigitized());
+        assertOptionalEquals(LocalDateTime.of(2003, 7, 1, 12, 29, 44, 0).toInstant(ZoneOffset.UTC),
+                     exif.getDateTimeOriginalAsDate());
+        assertOptionalEquals("800", exif.getSubsecTimeDigitized());
 //        assertEquals(FORMAT.parse("2007 04 21 21:51:02.000"), exif.getDateTimeAsDate());
-//        assertEquals(FORMAT.parse("2006 06 03 12:04:53.700"), exif.getDateTimeDigitizedAsDate());
-//        assertEquals(FORMAT.parse("2006 06 03 12:04:53.700"), exif.getDateTimeOriginalAsDate());
         assertOptionalEquals(new Rational(8321928, 1000000), exif.getShutterSpeedValue());
         assertOptionalEquals(new Rational(2970854, 1000000), exif.getApertureValue());
         assertOptionalEquals(new Rational(0, 6), exif.getExposureBiasValue());
@@ -130,14 +125,71 @@ public class EditableImageTest extends BaseTestSupport
 //        assertEquals(9996, (long)exif.getMakerNote());
         assertOptionalEquals("ASCII\u0000\u0000\u0000(C) Copyright by Fabrizio Giudici",
                                  exif.getUserComment().map(String::new));
-        assertOptionalEquals("80", exif.getSubsecTimeOriginal());
-        assertOptionalEquals("80", exif.getSubsecTimeDigitized());
         assertOptionalEquals(EXIF.SensingMethod.ONE_CHIP_COLOR_AREA_SENSOR, exif.getSensingMethod());
         assertOptionalEquals(EXIF.FileSource.DSC, exif.getFileSource());
         assertOptionalEquals(EXIF.SceneType.DIRECTLY_PHOTOGRAPHED_IMAGE, exif.getSceneType());
       }
 
     @Test
+    public void testReadMetadataJpegExportedByAdobeLightroom()
+      {
+        assertEquals(1, img20060603_0002_jpg.getMetadataCount(TIFF.class));
+        final TIFF tiff = img20060603_0002_jpg.getMetadata(TIFF.class);
+        assertNotNull(tiff);
+        assertFalse(tiff.isAvailable());
+
+        final EXIF exif = img20060603_0002_jpg.getMetadata(EXIF.class);
+        assertEquals(35, exif.getTagCodes().length);
+
+        assertOptionalEquals(6.0, exif.getApertureValue());
+        assertOptionalEquals(EXIF.Contrast.NORMAL, exif.getContrast());
+        assertOptionalEquals(EXIF.CustomRendered.NORMAL_PROCESS, exif.getCustomRendered());
+        // assertOptionalEquals("2007:04:21 21:51:02", exif.getDateTime());
+//        assertEquals(FORMAT.parse("2007 04 21 21:51:02.000"), exif.getDateTimeAsDate());
+        assertOptionalEquals("2006:06:03 12:04:53", exif.getDateTimeDigitized());
+        assertOptionalEquals("70", exif.getSubsecTimeDigitized());
+        assertOptionalEquals(LocalDateTime.of(2006, 6, 3, 12, 4, 53, 700000000).toInstant(ZoneOffset.UTC),
+                             exif.getDateTimeDigitizedAsDate());
+        assertOptionalEquals("2006:06:03 12:04:53", exif.getDateTimeOriginal());
+        assertOptionalEquals("70", exif.getSubsecTimeOriginal());
+        assertOptionalEquals(LocalDateTime.of(2006, 6, 3, 12, 4, 53, 700000000).toInstant(ZoneOffset.UTC),
+                             exif.getDateTimeOriginalAsDate());
+        assertOptionalEquals(1.0, exif.getDigitalZoomRatio());
+        assertOptionalEquals(EXIF.ExposureProgram.APERTURE_PRIORITY, exif.getExposureProgram());
+        assertOptionalEquals(new byte[]{2, 0, 2, 0, 1, 0, 2, 1}, exif.getEXIFCFAPattern());
+        assertOptionalEquals(new byte[]{48, 50, 51, 48}, exif.getEXIFVersion());
+        assertOptionalEquals(0.0, exif.getExposureBiasValue());
+        assertOptionalEquals(EXIF.ExposureMode.AUTO, exif.getExposureMode());
+        assertOptionalEquals(0.00625, exif.getExposureTime());
+        assertOptionalEquals(EXIF.FileSource.DSC, exif.getFileSource());
+        assertOptionalEquals(0, exif.getFlash());
+        assertOptionalEquals(8.0, exif.getFNumber());
+        assertOptionalEquals(85.0, exif.getFocalLength());
+        assertOptionalEquals(127, exif.getFocalLength35mmFilm());
+        assertOptionalEquals(EXIF.GainControl.NONE, exif.getGainControl());
+        assertOptionalEquals(200, exif.getISOSpeedRatings());
+        assertOptionalEquals(EXIF.LightSource.UNKNOWN, exif.getLightSource());
+        // assertOptionalEquals("NIKON CORPORATION", exif.getMake());
+        assertOptionalEquals(1.6, exif.getMaxApertureValue());
+        assertOptionalEquals(EXIF.MeteringMode.PATTERN, exif.getMeteringMode());
+        // assertOptionalEquals("NIKON D100", exif.getModel());
+        // assertOptionalEquals(EXIF.ResolutionUnit.INCHES, exif.getResolutionUnit());
+        assertOptionalEquals(EXIF.Saturation.NORMAL, exif.getSaturation());
+        assertOptionalEquals(0, exif.getSceneCaptureType());
+        assertOptionalEquals(EXIF.SceneType.DIRECTLY_PHOTOGRAPHED_IMAGE, exif.getSceneType());
+        assertOptionalEquals(EXIF.SensingMethod.ONE_CHIP_COLOR_AREA_SENSOR, exif.getSensingMethod());
+        assertOptionalEquals(EXIF.Sharpness.NORMAL, exif.getSharpness());
+        assertOptionalEquals(7.321928, exif.getShutterSpeedValue());
+        assertOptionalEquals(0, exif.getSubjectDistanceRange());
+        // assertOptionalEquals("Ver.2.00", exif.getSoftware());
+        // assertOptionalEquals(300.0, exif.getXResolution());
+        // assertOptionalEquals(300.0, exif.getYResolution());
+        assertOptionalEquals("ASCII\u0000\u0000\u0000(C) Copyright by Fabrizio Giudici",
+                             exif.getUserComment().map(String::new));
+        assertOptionalEquals(EXIF.WhiteBalance.AUTO, exif.getWhiteBalance());
+      }
+
+    @Test(enabled = false)
     public void testPropertiesWithNEF()
             throws IOException
       {
@@ -198,7 +250,7 @@ public class EditableImageTest extends BaseTestSupport
 ////        assertEquals(EXIF.SceneType.DIRECTLY_PHOTOGRAPHED_IMAGE, exif.getSceneType());
 //      }
 
-    @Test
+    @Test(enabled = false)
     public void testReadMetadataFromNEF()
             throws Exception
       {
@@ -211,7 +263,7 @@ public class EditableImageTest extends BaseTestSupport
         assertNotNull(tiff);
         assertTrue(tiff.isAvailable());
         assertEquals(25, tiff.getTagCodes().length);
-        dump(tiff);
+        dumpTags("TIFF", tiff, log::info);
         assertEquals(TIFF.NewSubFileType.REDUCED_RESOLUTION, tiff.getNewSubFileType());
         assertEquals(320, (long)tiff.getImageWidth().get());
         assertEquals(212, (long)tiff.getImageLength().get());
@@ -245,7 +297,7 @@ public class EditableImageTest extends BaseTestSupport
 //        assertTrue(exif == tiff.getSubDirectory("EXIF"));
         assertTrue(exif.isAvailable());
         assertEquals(22, exif.getTagCodes().length);
-        dump(exif);
+        dumpTags("EXIF", exif, log::info);
 
         assertEquals(new Rational(3125, 1000000), exif.getExposureTime());
         assertEquals(new Rational(28, 10), exif.getFNumber());
@@ -275,76 +327,8 @@ public class EditableImageTest extends BaseTestSupport
         assertTrue(Arrays.equals(new byte[]{0, 2, 0, 2, 1, 0, 2, 1}, exif.getEXIFCFAPattern().get()));
       }
 
-    @Test
-    public void testReadMetadataFromAdobeLightroomJPEG()
-      {
-        assertEquals(1, img20060603_0002_jpg.getMetadataCount(TIFF.class));
-        final TIFF tiff = img20060603_0002_jpg.getMetadata(TIFF.class);
-        assertNotNull(tiff);
-        assertFalse(tiff.isAvailable());
 
-        final EXIF exif = img20060603_0002_jpg.getMetadata(EXIF.class);
-        assertEquals(41, exif.getTagCodes().length);
-
-        assertOptionalEquals(6.0, exif.getApertureValue());
-        assertOptionalEquals(EXIF.Contrast.NORMAL, exif.getContrast());
-        assertOptionalEquals(EXIF.CustomRendered.NORMAL_PROCESS, exif.getCustomRendered());
-        assertOptionalEquals("2007:04:21 21:51:02", exif.getDateTime());
-        assertOptionalEquals("2006:06:03 12:04:53", exif.getDateTimeDigitized());
-        assertOptionalEquals("2006:06:03 12:04:53", exif.getDateTimeOriginal());
-//        assertEquals(FORMAT.parse("2007 04 21 21:51:02.000"), exif.getDateTimeAsDate());
-//        assertEquals(FORMAT.parse("2006 06 03 12:04:53.700"), exif.getDateTimeDigitizedAsDate());
-//        assertEquals(FORMAT.parse("2006 06 03 12:04:53.700"), exif.getDateTimeOriginalAsDate());
-        assertOptionalEquals(1.0, exif.getDigitalZoomRatio());
-        assertOptionalEquals(EXIF.ExposureProgram.APERTURE_PRIORITY, exif.getExposureProgram());
-        assertOptionalEquals(new byte[]{2, 0, 2, 0, 1, 0, 2, 1}, exif.getEXIFCFAPattern());
-        assertOptionalEquals(new byte[]{48, 50, 50, 49}, exif.getEXIFVersion());
-        assertOptionalEquals(0.0, exif.getExposureBiasValue());
-        assertOptionalEquals(EXIF.ExposureMode.AUTO, exif.getExposureMode());
-        assertOptionalEquals(0.00625, exif.getExposureTime());
-        assertOptionalEquals(EXIF.FileSource.DSC, exif.getFileSource());
-        assertOptionalEquals(0, exif.getFlash());
-        assertOptionalEquals(8.0, exif.getFNumber());
-        assertOptionalEquals(85.0, exif.getFocalLength());
-        assertOptionalEquals(127, exif.getFocalLength35mmFilm());
-        assertOptionalEquals(EXIF.GainControl.NONE, exif.getGainControl());
-        assertOptionalEquals(200, exif.getISOSpeedRatings());
-        assertOptionalEquals(EXIF.LightSource.UNKNOWN, exif.getLightSource());
-        assertOptionalEquals("NIKON CORPORATION", exif.getMake());
-        assertOptionalEquals(1.6, exif.getMaxApertureValue());
-        assertOptionalEquals(EXIF.MeteringMode.PATTERN, exif.getMeteringMode());
-        assertOptionalEquals("NIKON D100", exif.getModel());
-        assertOptionalEquals(EXIF.ResolutionUnit.INCHES, exif.getResolutionUnit());
-        assertOptionalEquals(EXIF.Saturation.NORMAL, exif.getSaturation());
-        assertOptionalEquals(0, exif.getSceneCaptureType());
-        assertOptionalEquals(EXIF.SceneType.DIRECTLY_PHOTOGRAPHED_IMAGE, exif.getSceneType());
-        assertOptionalEquals(EXIF.SensingMethod.ONE_CHIP_COLOR_AREA_SENSOR, exif.getSensingMethod());
-        assertOptionalEquals(EXIF.Sharpness.NORMAL, exif.getSharpness());
-        assertOptionalEquals(7.321928, exif.getShutterSpeedValue());
-        assertOptionalEquals(0, exif.getSubjectDistanceRange());
-        assertOptionalEquals("70", exif.getSubsecTimeDigitized());
-        assertOptionalEquals("70", exif.getSubsecTimeOriginal());
-        assertOptionalEquals("Ver.2.00", exif.getSoftware());
-        assertOptionalEquals(300.0, exif.getXResolution());
-        assertOptionalEquals(300.0, exif.getYResolution());
-        assertOptionalEquals("ASCII\u0000\u0000\u0000(C) Copyright by Fabrizio Giudici",
-                                 exif.getUserComment().map(String::new));
-        assertOptionalEquals(EXIF.WhiteBalance.AUTO, exif.getWhiteBalance());
-      }
-
-    private static <T> void assertOptionalEquals (final T expected, final Optional<T> actual)
-      {
-        assertTrue(actual.isPresent());
-        assertEquals(expected, actual.get());
-      }
-
-    private static void assertOptionalEquals (final double expected, final Optional<Rational> actual)
-      {
-        assertTrue(actual.isPresent());
-        assertEquals(expected, actual.get().doubleValue());
-      }
-
-    @Test
+    @Test(enabled = false)
     public void testReadIPTCFromJPEG1()
       {
 
@@ -382,7 +366,7 @@ public class EditableImageTest extends BaseTestSupport
         assertOptionalEquals("Jacques Brown", iptc.getWriterEditor());
       }
 
-    @Test
+    @Test(enabled = false)
     public void testSerialize()
             throws IOException, ClassNotFoundException
       {
@@ -397,70 +381,6 @@ public class EditableImageTest extends BaseTestSupport
         final EditableImage image2 = (EditableImage)ois.readObject();
         ois.close();
         log.info("deserialized" + image2);
-      }
-
-    @Test(enabled = false)
-    private void _testProperties (final Path file,
-                                  final int expectedWidth,
-                                  final int expectedHeight,
-                                  final int expectedBandCount,
-                                  final int expectedBitsPerBand,
-                                  final int expectedBitsPerPixel,
-                                  final EditableImage.DataType expectedDataType)
-            throws IOException
-      {
-        final EditableImage image = EditableImage.create(new ReadOp(file));
-        final int width = image.getWidth();
-        final int height = image.getHeight();
-        final int bandCount = image.getBandCount();
-        final int bitsPerBand = image.getBitsPerBand();
-        final int bitsPerPixel = image.getBitsPerPixel();
-        final EditableImage.DataType dataType = image.getDataType();
-
-        assertEquals(expectedWidth, width);
-        assertEquals(expectedHeight, height);
-        assertEquals(expectedBandCount, bandCount);
-        assertEquals(expectedBitsPerBand, bitsPerBand);
-        assertEquals(expectedBitsPerPixel, bitsPerPixel);
-        assertEquals(expectedDataType, dataType);
-
-        log.info(">>>> File:           " + file);
-        log.info(">>>> Size:           " + width + " x " + height);
-        log.info(">>>> Bands:          " + bandCount);
-        log.info(">>>> Bits per bands: " + bitsPerBand);
-        log.info(">>>> Bits per pixel: " + bitsPerPixel);
-        log.info(">>>> Data type:      " + dataType);
-      }
-
-    private void dump (final Directory directory)
-            throws NoSuchMethodException, IllegalAccessException, IllegalArgumentException, InvocationTargetException
-      {
-        final String name = directory.getClass().getSimpleName();
-
-        for (final int tag : directory.getTagCodes())
-          {
-            String string = "???";
-            String type = "???";
-            final Object value = directory.getObject(tag);
-
-            if (value == null)
-              {
-                string = "null";
-                type = "null";
-              }
-            else if (!value.getClass().isArray())
-              {
-                string = value.toString();
-                type = value.getClass().getSimpleName();
-              }
-            else
-              {
-                string = (String)Arrays.class.getMethod("toString", value.getClass()).invoke(null, value);
-                type = value.getClass().getSimpleName();
-              }
-
-            System.err.printf("%5d %-10s %-30s %-10s %s\n", tag, name, directory.getTagName(tag), type, string);
-          }
       }
 
     @Test(dataProvider = "stoppingDownImages")
@@ -480,80 +400,15 @@ public class EditableImageTest extends BaseTestSupport
         // log.info("XMP: {}", xmp);
         final String resourceName = path.getFileName().toString().replaceAll("\\.jpg$", ".txt");
         final List<String> strings = new ArrayList<>();
-        dumpTags(strings, "TIFF", tiff);
-        dumpTags(strings, "EXIF", exif);
-        dumpTags(strings, "IPTC", iptc);
-        final Path actualResults = Paths.get("target/test-results");
-        Files.createDirectories(actualResults);
+        dumpTags("TIFF", tiff, strings::add);
+        dumpTags("EXIF", exif, strings::add);
+        dumpTags("IPTC", iptc, strings::add);
+        final Path actualResults = Path.of("target/test-results/stoppingdown_100_20230116");
+        final Path expectedResults = Path.of("src/test/resources/expected-results/stoppingdown_100_20230116");
         final Path actualDump = actualResults.resolve(resourceName);
+        final Path expectedDump = expectedResults.resolve(resourceName);
+        Files.createDirectories(actualResults);
         Files.write(actualDump, strings, UTF_8);
-        final Path expectedDump = path.resolveSibling(resourceName);
         assertSameContents(expectedDump, actualDump);
-      }
-
-    @DataProvider
-    public static Object[][] stoppingDownImages()
-            throws IOException
-      {
-        if (!Files.exists(TEST_SD100_FOLDER))
-          {
-            log.warn("TEST SET PATH NOT FOUND: {}", TEST_SD100_FOLDER);
-            return new Object[0][1];
-          }
-
-        try (final Stream<Path> s = Files.list(TEST_SD100_FOLDER))
-          {
-            return s.filter(p -> p.getFileName().toString().endsWith(".jpg"))
-                    .sorted()
-                    .limit(99999)
-                    .map(p -> new Object[]{p})
-                    .toArray(Object[][]::new);
-          }
-      }
-
-    /*******************************************************************************************************************
-     *
-     ******************************************************************************************************************/
-    private static void dumpTags (@Nonnull final List<? super String> strings,
-                                  @Nonnull final String directoryName,
-                                  @Nonnull final Directory directory)
-      {
-        for (final int tag : directory.getTagCodes())
-          {
-            Object value = directory.getObject(tag);
-
-            if (value instanceof byte[])
-              {
-                value = Arrays.toString((byte[])value);
-              }
-            else if (value instanceof Rational[])
-              {
-                value = Arrays.toString((Rational[])value);
-              }
-            else if (value instanceof Object[])
-              {
-                value = Arrays.toString((Object[])value);
-              }
-            else if (value instanceof Date)
-              {
-                value = ((Date)value).toInstant().atZone(ZoneId.systemDefault()).toLocalDateTime()
-                                     .format(DateTimeFormatter.ISO_LOCAL_DATE_TIME);
-              }
-
-            final String s = String.format("%s [%d] %s: %s", directoryName, tag, directory.getTagName(tag), value);
-            log.info("{}", s);
-            strings.add(s);
-          }
-
-        if (directory instanceof EXIF)
-          {
-            final EXIF exif = (EXIF)directory;
-            final List<Pair<String, Function<EXIF, Optional<Instant>>>> x = List.of(
-                Pair.of("dateTimeAsDate", EXIF::getDateTimeAsDate),
-                Pair.of("dateTimeOriginalAsDate", EXIF::getDateTimeOriginalAsDate),
-                Pair.of("dateTimeDigitizedAsDate", EXIF::getDateTimeDigitizedAsDate));
-            x.forEach(p ->
-                      p.b.apply(exif).ifPresent(i -> strings.add(String.format("%s %s: %s", directoryName, p.a, i))));
-          }
       }
   }
